@@ -6,9 +6,11 @@ changelog of master-branch
     - added support for OR-condition in block-states
     - block-states act when selecting from multiple models better
     - block models can now rotate themselves
-    - tweaked generation system to look more faster
-    - improved block-showing performance
+    - tweaked generation system to look more faster and be more faster
+    - world generation is now done parallel across up to 5 chunks
+    - improved block-showing performance by caching (rotated) vertices
     - added config for height of world
+    - added an world-generation progress-view screen like in MC
 
 
 changelog of snapshot 20w10a [released on 04.03.2020]
